--- a/day1_reading_journal.ipynb
+++ b/day1_reading_journal.ipynb
@@ -36,13 +36,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "2562 seconds\n",
+    "6.21 miles\n",
+    "0.145 miles/minute  0.0024 miles/second"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +81,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. 8.5\n",
+    "2. 8.5\n",
+    "3. 4.0\n",
+    "4. 11\n",
+    "5. '.....'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "width=int; height=double; delimiter=string\n",
+    "int/int turns it into a float answer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,7 +122,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> import math\n",
+    ">>> (4/3)*math.pi*(5**3)\n",
+    "523.5987755982989"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +142,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "price=24.95\n",
+    ">>> discount=0.6 #result when 40% is applied\n",
+    ">>> new_price=price*discount\n",
+    ">>> print(new_price)\n",
+    "14.969999999999999\n",
+    ">>> new_price*60+59*0.75+3\n",
+    "945.4499999999999"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,9 +160,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    ">>> seconds=1\n",
+    ">>> minutes=60*seconds\n",
+    ">>> hours=60*minutes\n",
+    ">>> start_time=6*hours+52*minutes\n",
+    ">>> easy_pace=2*(8*minutes+15*seconds)\n",
+    ">>> tempo=3*(7*minutes+12*seconds)\n",
+    ">>> total_time=start_time+easy_pace+tempo\n",
+    ">>> hours_taken=int(total_time/hours)\n",
+    ">>> fraction_hours=total_time%hours     #gives amount of fraction hour to be converted to minutes and seconds\n",
+    ">>> minutes_taken=int(fraction_hours/minutes)\n",
+    ">>> seconds_taken=fraction_hours%minutes\n",
+    ">>> print (str(hours_taken) + \":\" + str(minutes_taken) + \":\" + str(seconds_taken))\n",
+    "7:30:6\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,7 +211,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def right_justify(s):\n",
+    "...     word_length=len(s)\n",
+    "...     print(\" \"*(70-word_length)+s)\n",
+    "... \n",
+    ">>> right_justify('monty')\n",
+    "                                                                 monty"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,7 +269,33 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def square_maker():\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "... \n",
+    ">>> square_maker()\n",
+    " +  -  -  -  -  +  -  -  -  -  + \n",
+    " |              |              | \n",
+    " |              |              | \n",
+    " |              |              | \n",
+    " |              |              | \n",
+    " +  -  -  -  -  +  -  -  -  -  + \n",
+    " |              |              | \n",
+    " |              |              | \n",
+    " |              |              | \n",
+    " |              |              | \n",
+    " +  -  -  -  -  +  -  -  -  -  +"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,7 +311,53 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def square_maker():\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' |')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ' + 4*'   ' + ' | ')\n",
+    "...     print(' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ' + 4*' - ' + ' + ')\n",
+    "... \n",
+    ">>> square_maker()\n",
+    " +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  + \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              |\n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  + \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  + \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  + \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " |              |              |              |              | \n",
+    " +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  +  -  -  -  -  +"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,7 +385,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def check_fermat(a,b,c,n):\n",
+    "...     if(n>2 and (a**n+b**n==c**n)):\n",
+    "...             print(\"Holy smokes, Fermat was wrong!\")\n",
+    "...     else:\n",
+    "...             print(\"No that doesn't work\")\n",
+    "... \n",
+    ">>> check_fermat(4,5,6,4)\n",
+    "No that doesn't work"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,7 +410,21 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def prompt_fermat():\n",
+    "...     a=input(\"a:\")\n",
+    "...     b=input(\"b:\")\n",
+    "...     c=input(\"c:\")\n",
+    "...     n=input(\"n:\")\n",
+    "...     check_fermat(int(a),int(b),int(c),int(n))\n",
+    "... \n",
+    ">>> prompt_fermat()\n",
+    "a:5\n",
+    "b:6\n",
+    "c:7\n",
+    "n:1\n",
+    "No that doesn't work\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,7 +445,22 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def is_triangle(a,b,c):\n",
+    "...     if(a>b+c):\n",
+    "...             print(\"no\")\n",
+    "...     elif(b>a+c):\n",
+    "...             print(\"no\")\n",
+    "...     elif(c>a+b):\n",
+    "...             print(\"no\")\n",
+    "...     else:\n",
+    "...             print(\"yes\")\n",
+    "... \n",
+    ">>> is_triangle(5,4,3)\n",
+    "yes\n",
+    ">>> is_triangle(15,4,3)\n",
+    "no"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,7 +476,19 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ">>> def check_triangle():\n",
+    "...     a=input(\"a:\")\n",
+    "...     b=input(\"b:\")\n",
+    "...     c=input(\"c:\")\n",
+    "...     is_triangle(a,b,c)\n",
+    "... \n",
+    ">>> check_triangle()\n",
+    "a:5.478\n",
+    "b:5.98\n",
+    "c:35.4568\n",
+    "no"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,7 +501,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "~3 hours"
+   ]
   },
   {
    "cell_type": "markdown",
