Turning in my reading journal for day 4

--- a/day4_reading_journal.ipynb
+++ b/day4_reading_journal.ipynb
@@ -34,12 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def middle(list):\n",
+    "    i=len(list)\n",
+    "    new_list=list[1:i-1]\n",
+    "    return new_list\n",
+    "\n",
+    "middle([1,2,3,4])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,17 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def chop(list):\n",
+    "    i=len(list)\n",
+    "    del list[i-1]\n",
+    "    del list[0]\n",
+    "\n",
+    "chop([1,2,3,4])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Middle makes a new list that just excludes the first and last when it is being created, and chop keeps the original list and modifies it by deleting the last term first then the first term. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +102,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_anagram(word1,word2):\n",
+    "    list1 = list(word1)\n",
+    "    list2 = list(word2)\n",
+    "    list1.sort()\n",
+    "    list2.sort()\n",
+    "    if list1 == list2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "is_anagram(\"Hello\",\"olsleH\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,17 +147,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def has_duplicates(master):\n",
+    "    master.sort()\n",
+    "    for items in master:\n",
+    "        if master[items] == master[items+1]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    \n",
+    "has_duplicates([1,2,2,8,3,6,2,4,8,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def has_duplicates(master):\n",
+    "    master.sort()\n",
+    "    for items in range(len(master)-1):\n",
+    "        if master[items] == master[items+1]:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "def birthday_maker(n):\n",
+    "    birthdays=[]\n",
+    "    for number in  range(n):\n",
+    "        day=random.randint(1,365)\n",
+    "        birthdays.append(day)\n",
+    "    return birthdays\n",
+    "        \n",
+    "def same_birthday(number_students, number_runs):\n",
+    "    matches=0\n",
+    "    for birthday in range(number_runs):\n",
+    "        j=birthday_maker(number_students)\n",
+    "        if has_duplicates(j):\n",
+    "            matches+=1\n",
+    "    prob=matches/number_runs\n",
+    "    return prob\n",
+    "\n",
+    "same_birthday(23,100)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3%"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,12 +251,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bisect(list_words, word):\n",
+    "    mid=len(list_words)//2\n",
+    "    if len(list_words) == 0:\n",
+    "        return False\n",
+    "    if list_words[mid] == word:\n",
+    "        return True\n",
+    "    if list_words[mid] > word:\n",
+    "        return bisect(list_words[:mid], word)\n",
+    "    else:\n",
+    "        return bisect(list_words[mid+1:], word)\n",
+    "        \n",
+    "def dictionary(list_words, word):\n",
+    "    list_words.sort()\n",
+    "    print(bisect(list_words,word))\n",
+    "    \n",
+    "dictionary(['hello','goodbye','this','is','a','word','mississippi'],'the')"
+   ]
   },
   {
    "cell_type": "markdown",
