--- a/day5_reading_journal.ipynb
+++ b/day5_reading_journal.ipynb
@@ -41,9 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -74,11 +75,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "solution": "Section 4.3"
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "import math\n",
+    "\n",
+    "timmy = turtle.Turtle()\n",
+    "\n",
+    "\n",
+    "def square(length):\n",
+    "    for i in range(4):\n",
+    "        timmy.fd(length)\n",
+    "        timmy.rt(90)\n",
+    "\n",
+    "\n",
+    "def rectangle(length, width):\n",
+    "    for i in range(2):\n",
+    "        timmy.fd(length)\n",
+    "        timmy.rt(90)\n",
+    "        timmy.fd(width)\n",
+    "        timmy.rt(90)\n",
+    "\n",
+    "\n",
+    "def polygon(t, n, length):\n",
+    "    angle = 360.0 / n\n",
+    "    for i in range(n):\n",
+    "        t.fd(length)\n",
+    "        t.lt(angle)\n",
+    "\n",
+    "\n",
+    "def circle(t, r):\n",
+    "    length = (2 * math.pi * r) / 300\n",
+    "    polygon(t, 300, length)\n",
+    "\n",
+    "\n",
+    "def broad_circle(t, r, angle):\n",
+    "    arc_length = 2 * math.pi * r * abs(angle) / 360\n",
+    "    n = int(arc_length / 4) + 1  # number of segments\n",
+    "    increment_length = arc_length / n\n",
+    "    angle = angle / n\n",
+    "    t.rt(angle / 2)\n",
+    "    for i in range(n):\n",
+    "        t.fd(increment_length)\n",
+    "        t.rt(angle)\n",
+    "    t.rt(angle / 2)\n",
+    "\n",
+    "\n",
+    "broad_circle(timmy, 50, 270)\n",
+    "turtle.mainloop()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +147,25 @@
     "solution": "More fun"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def petal_drawer(t, r, angle):\n",
+    "    \"\"\" Draws a petal of the flower\n",
+    "    takes a turtle, radius, and angle that is between each arc\n",
+    "    \"\"\"\n",
+    "    for i in range(2):\n",
+    "        broad_circle(t, r, angle)\n",
+    "        t.lt(180 - angle)\n",
+    "\n",
+    "\n",
+    "def flower_drawer(t, r, n, angle):\n",
+    "    \"\"\"Draws the whole flower\n",
+    "    takes a turtle, radius of each arc, number of petals,\n",
+    "    and an angle between each arc\n",
+    "    \"\"\"\n",
+    "    for i in range(n):\n",
+    "        petal_drawer(t, r, angle)\n",
+    "        t.lt(360.0 / n)"
+   ]
   },
   {
    "cell_type": "markdown",
