Turning in Reading Journal Day 6

--- a/day6_reading_journal.ipynb
+++ b/day6_reading_journal.ipynb
@@ -77,6 +77,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://pythontutor.com/visualize.html#code=def%20b%28z%29%3A%0A%20%20%20%20prod%20%3D%20a%28z,%20z%29%0A%20%20%20%20print%28z,%20prod%29%0A%20%20%20%20return%20prod%0A%0Adef%20a%28x,%20y%29%3A%0A%20%20%20%20x%20%3D%20x%20%2B%201%0A%20%20%20%20return%20x%20*%20y%0A%0Adef%20c%28x,%20y,%20z%29%3A%0A%20%20%20%20total%20%3D%20x%20%2B%20y%20%2B%20z%0A%20%20%20%20square%20%3D%20b%28total%29**2%0A%20%20%20%20return%20square%0A%0Ax%20%3D%201%0Ay%20%3D%20x%20%2B%201%0Aprint%28c%28x,%20y%2B3,%20x%2By%29%29&cumulative=false&curInstr=19&heapPrimitives=false&mode=display&origin=opt-frontend.js&py=2&rawInputLstJSON=%5B%5D&textReferences=false"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "is_question": true,
     "problem": "Exercise 6.6"
@@ -95,13 +102,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def first(word):\n",
+    "    return word[0]\n",
+    "\n",
+    "\n",
+    "def last(word):\n",
+    "    return word[-1]\n",
+    "\n",
+    "\n",
+    "def middle(word):\n",
+    "    return word[1:-1]\n",
+    "\n",
+    "\n",
+    "def is_palindrome(word):\n",
+    "    if len(word) <= 2 and first(word) == last(word):\n",
+    "        return True\n",
+    "    elif len(word) <= 2 and first(word) != last(word):\n",
+    "        return False\n",
+    "    elif last(word) == first(word):\n",
+    "        return is_palindrome(middle(word))\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "print(is_palindrome('noon'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,11 +159,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.6 challenge"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "list_of_words = open('words.txt')\n",
+    "\n",
+    "\n",
+    "def find_all_palindromes(list_of_words):\n",
+    "    counter = 0\n",
+    "    for line in list_of_words:\n",
+    "        word = line.strip()\n",
+    "        if is_palindrome(word):\n",
+    "            counter += 1\n",
+    "    return counter\n",
+    "\n",
+    "\n",
+    "print(find_all_palindromes(list_of_words))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "91"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,13 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 6.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_power(a, b):\n",
+    "    if a == 1:\n",
+    "        return True\n",
+    "    elif a % b == 0 and is_power(a/b, b) == True:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "print(is_power(9, 3))"
+   ]
   },
   {
    "cell_type": "markdown",
