Turning in day 8 reading journal

--- a/day8_reading_journal.ipynb
+++ b/day8_reading_journal.ipynb
@@ -61,6 +61,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A programmer defined type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " "
    ]
   },
@@ -78,13 +85,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 15.1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class point:\n",
+    "    \"\"\"Defines a point as a set of x,y coordinates\"\"\"\n",
+    "\n",
+    "\n",
+    "point1 = point()\n",
+    "point2 = point()\n",
+    "\n",
+    "point1.x = 3\n",
+    "point1.y = 4\n",
+    "point2.x = 5\n",
+    "point2.y = 6\n",
+    "\n",
+    "def distance_between_points(point1, point2):\n",
+    "    x1 = point1.x\n",
+    "    x2 = point2.x\n",
+    "    y1 = point1.y\n",
+    "    y2 = point2.y\n",
+    "    distance = math.sqrt((x2 - x1) ^ 2 + (y2 - y1) ^ 2)\n",
+    "    return distance\n",
+    "\n",
+    "distance_between_points(point1, point2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,13 +142,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 15.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'New x,y is 300 400'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class point:\n",
+    "    \"\"\"Defines a point as a set of x,y coordinates\"\"\"\n",
+    "\n",
+    "class rectangle:\n",
+    "    \"\"\"Defines a rectanlge as a point or corner and the legth and width\"\"\"\n",
+    "    \n",
+    "box = rectangle()\n",
+    "box.corner = point()\n",
+    "box.width = 200.0\n",
+    "box.height = 100.0\n",
+    "box.corner.x = 0\n",
+    "box.corner.y = 0\n",
+    "\n",
+    "def move_rectangle(rectangle, xmove, ymove):\n",
+    "    corner = rectangle.corner\n",
+    "    x = rectangle.corner.x\n",
+    "    y = rectangle.corner.y\n",
+    "    new_x = x + xmove\n",
+    "    new_y = y + ymove\n",
+    "    return \"New x,y is \" + str(new_x) + \" \" + str(new_y)\n",
+    "\n",
+    "move_rectangle(box, 300, 400)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,13 +198,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 15.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'New x, y is 300 , 400'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class point:\n",
+    "    \"\"\"Defines a point as a set of x,y coordinates\"\"\"\n",
+    "\n",
+    "class rectangle:\n",
+    "    \"\"\"Defines a rectanlge as a point or corner and the legth and width\"\"\"\n",
+    "    \n",
+    "box = rectangle()\n",
+    "box.corner = point()\n",
+    "box.width = 200.0\n",
+    "box.height = 100.0\n",
+    "box.corner.x = 0\n",
+    "box.corner.y = 0\n",
+    "\n",
+    "def move_rectangle(box, xmove, ymove):\n",
+    "    new_box = rectangle()\n",
+    "    new_box.corner = point()\n",
+    "    new_box.corner = box.corner\n",
+    "    \n",
+    "    new_box.width = box.width\n",
+    "    new_box.height = box.height\n",
+    "    \n",
+    "    new_box.corner.x = box.corner.x\n",
+    "    new_box.corner.y = box.corner.y\n",
+    "    new_x = new_box.corner.x + xmove\n",
+    "    new_y = new_box.corner.y + ymove\n",
+    "    return \"New x, y is \" + str(new_x) + \" , \" + str(new_y)\n",
+    "\n",
+    "move_rectangle(box, 300, 400)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,21 +285,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
