Re commiting day 7 because it was lost in the ether

--- a/day7_reading_journal.ipynb
+++ b/day7_reading_journal.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Like a list, but it can take any type."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,21 +68,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 11.2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    histogram('hello')\n",
+      "Expecting:\n",
+      "    {'e': 1, 'l': 2, 'h': 1, 'o': 1}\n",
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "def histogram(s):\n",
+    "    \"\"\"\n",
+    "    >>> histogram('hello')\n",
+    "    {'e': 1, 'l': 2, 'h': 1, 'o': 1}\n",
+    "    \"\"\"\n",
     "    d = dict()\n",
     "    for c in s:\n",
-    "        if c not in d:\n",
-    "            d[c] = 1\n",
-    "        else:\n",
-    "            d[c] += 1\n",
-    "    return d"
+    "        d[c]=d.get(c,0)+1\n",
+    "    return d\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.run_docstring_examples(histogram, globals(), verbose=True)"
    ]
   },
   {
@@ -104,18 +125,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    reverse_lookup('helloo',2)\n",
+      "Expecting:\n",
+      "    ['l', 'o']\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 3, in NoName\n",
+      "Failed example:\n",
+      "    reverse_lookup('helloo',2)\n",
+      "Expected:\n",
+      "    ['l', 'o']\n",
+      "Got:\n",
+      "    ['o', 'l']\n",
+      "Trying:\n",
+      "    reverse_lookup('helloo',2)\n",
+      "Expecting:\n",
+      "    ['o', 'l']\n",
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_lookup(d, v):\n",
+    "    \"\"\"\n",
+    "    >>> reverse_lookup('helloo',2)\n",
+    "    ['l', 'o']\n",
+    "    >>> reverse_lookup('helloo',2)\n",
+    "    ['o', 'l']\n",
+    "    \"\"\"\n",
+    "    res=[]\n",
+    "    e=dict()\n",
     "    for k in d:\n",
-    "        if d[k] == v:\n",
-    "            return k\n",
-    "    raise ValueError"
+    "        e[k] = e.get(k,0)+1\n",
+    "    for i in e:\n",
+    "        if e[i] == v:\n",
+    "            res.append(i)\n",
+    "    return res\n",
+    "    \n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.run_docstring_examples(reverse_lookup, globals(), verbose=True)"
    ]
   },
   {
@@ -142,7 +203,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "They have to be hashable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,13 +232,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 11.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "known = {0:0, 1:1}\n",
+    "\n",
+    "def fibonacci(n):\n",
+    "    if n in known:\n",
+    "        return known[n]\n",
+    "\n",
+    "    res = fibonacci(n-1) + fibonacci(n-2)\n",
+    "    known[n] = res\n",
+    "    return res\n",
+    "\n",
+    "fibonacci(8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +282,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Like a list, but immutable and can have any type and can be indexed by integers."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,13 +323,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    sumall(2,4,5,6)\n",
+      "Expecting:\n",
+      "    17\n",
+      "ok\n",
+      "Trying:\n",
+      "    sumall(2.6,4,57,8.2)\n",
+      "Expecting:\n",
+      "    71.8\n",
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumall(*args):\n",
+    "    \"\"\"\n",
+    "    >>> sumall(2,4,5,6)\n",
+    "    17\n",
+    "    >>> sumall(2.6,4,57,8.2)\n",
+    "    71.8\n",
+    "    \"\"\"\n",
+    "    total = 0\n",
+    "    for i in range(len(args)):\n",
+    "        total = total + args[i]\n",
+    "    return total\n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.run_docstring_examples(sumall, globals(), verbose=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,19 +400,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true,
-    "solution": "Exercise 12 sort"
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    " "
+    "def sort_by_last_letter(*args):\n",
+    "    \"\"\"\n",
+    "    >>> sort_by_last_letter('seger','smith','abi','geddes')\n",
+    "    ['smith', 'abi', 'seger', 'geddes']\n",
+    "    \"\"\"\n",
+    "    t=[]\n",
+    "    for item in args:\n",
+    "        t.append((item[len(item)-1], item))\n",
+    "    \n",
+    "    t.sort()\n",
+    "    \n",
+    "    res=[]\n",
+    "    for letter, item in t:\n",
+    "        res.append(item)\n",
+    "    return res\n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.run_docstring_examples(sort_by_last_letter, globals(), verbose=False)"
    ]
   },
   {
@@ -309,7 +444,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "-Strings can only be used when the elements are characters\n",
+    "-lists are mutable so you don't need to make a new one everytime you change something\n",
+    "-tuples are imutable, but it can be easier to return items, they are better for dictionary keys, reduce problems related to aliasing"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,13 +473,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 12.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['s', 'i', 'p', 'm']"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def histogram(s):\n",
+    "    \"\"\"\n",
+    "    >>> histogram('hello')\n",
+    "    {'e': 1, 'l': 2, 'h': 1, 'o': 1}\n",
+    "    \"\"\"\n",
+    "    d = {}\n",
+    "    for c in s:\n",
+    "        d[c] = d.get(c, 0) + 1\n",
+    "    return d\n",
+    "\n",
+    "\n",
+    "def most_frequent(s):\n",
+    "    \"\"\"\n",
+    "    Sorts letters in decreasing order of frequency\n",
+    "    \"\"\"\n",
+    "    hist = histogram(s)\n",
+    "    \n",
+    "    k=[]\n",
+    "    for x, freq in hist.items():\n",
+    "        k.append((freq, x)) \n",
+    "    \n",
+    "    k.sort(reverse=True)\n",
+    "    \n",
+    "    res=[]\n",
+    "    for freq, x in k:\n",
+    "        res.append(x)  \n",
+    "    return res\n",
+    "\n",
+    "most_frequent('mississippi')"
+   ]
   },
   {
    "cell_type": "markdown",
