Turning in reading journal for day 9

--- a/day9_reading_journal.ipynb
+++ b/day9_reading_journal.ipynb
@@ -35,13 +35,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 16.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Time():\n",
+    "    \"\"\"\n",
+    "    A class for time that stores the hours, minutes, and seconds\n",
+    "    \"\"\"\n",
+    "\n",
+    "t1 = Time()\n",
+    "t2 = Time()\n",
+    "t1.hour = 3\n",
+    "t2.hour = 4\n",
+    "t1.minute = 34\n",
+    "t2.minute = 52\n",
+    "t1.second = 0\n",
+    "t2.second = 0\n",
+    "    \n",
+    "def is_after(t1, t2):\n",
+    "    if t1.hour < t2.hour:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "\n",
+    "is_after(t1, t2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,13 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "solution": "Exercise 17.2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,13 +127,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"%d, %d\" %(self.x, self.y)\n",
+    "\n",
+    "    \n",
+    "test = Point()\n",
+    "print(test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,13 +169,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Position: 2, 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"%d, %d\" %(self.x, self.y)\n",
+    "    \n",
+    "    def add(self, x, y):\n",
+    "        self.x = self.x + x\n",
+    "        self.y = self.y + y\n",
+    "        return \"New Position: %d, %d\" %(self.x, self.y)\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        self.x = self.x + other.x\n",
+    "        self.y = self.y + other.y\n",
+    "        return \"New Position: %d, %d\" %(self.x, self.y)\n",
+    "        \n",
+    "    \n",
+    "test = Point()\n",
+    "point2 = Point(2,3)\n",
+    "print(test + point2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,13 +232,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 17.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roo has these items in its pouch: \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Kangaroo():\n",
+    "    def __init__(self, name, items=None):\n",
+    "        self.name = name\n",
+    "        if items == None:\n",
+    "            items = []\n",
+    "        self.pouch = items\n",
+    "\n",
+    "    def put_in_pouch(self, other):\n",
+    "        self.pouch.append(other)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        message = [self.name + \" has these items in its pouch: \"]\n",
+    "        for obj in self.pouch:\n",
+    "            temp = '  ' + object.__str__(obj)\n",
+    "            message.append(temp)\n",
+    "        return '\\n'.join(message)\n",
+    "\n",
+    "\n",
+    "kanga = Kangaroo('Kanga')\n",
+    "roo = Kangaroo('Roo')\n",
+    "kanga.put_in_pouch('wallet')\n",
+    "kanga.put_in_pouch('car keys')\n",
+    "kanga.put_in_pouch(roo)\n",
+    "\n",
+    "print(roo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,7 +314,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
