Turning in day 10

--- a/day10_reading_journal.ipynb
+++ b/day10_reading_journal.ipynb
@@ -69,13 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 1"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Event():\n",
+    "    \"\"\"\n",
+    "    A class that represents an event on a calendar\n",
+    "    \"\"\"\n",
+    "    def __init__(self, name='test', start=0, end=1):\n",
+    "        self.name = name\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"Name:%s, Start:%d, End:%d\"%(self.name, self.start, self.end)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,13 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "solution": "Exercise 2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def duration(self):\n",
+    "    start = self.start\n",
+    "    end = self.end\n",
+    "    return end-start"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,9 +131,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:Test, Start:0, End:1\n",
+      "test\n",
+      "Test3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Event():\n",
+    "    \"\"\"\n",
+    "    A class that represents an event on a calendar\n",
+    "    \"\"\"\n",
+    "    def __init__(self, name='test', start=0, end=1):\n",
+    "        self.name = name\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"Name:%s, Start:%d, End:%d\"%(self.name, self.start, self.end)\n",
+    "\n",
+    "\n",
+    "class Agenda():\n",
+    "    \"\"\"\n",
+    "    A class that stores multiple event objects as part of a calendar\n",
+    "    \"\"\"\n",
+    "    global events\n",
+    "    events = []\n",
+    "    def __init__(self, event=Event()):\n",
+    "        self.event = event\n",
+    "        events.append(event.name)\n",
+    "    def add_event(self, other):\n",
+    "        events.append(other.name)        \n",
+    "    def __str__(self):\n",
+    "        return self.event.name\n",
+    "    def print_agenda(self):\n",
+    "        for i in range(len(events)):\n",
+    "            print(events[i])\n",
+    "            \n",
+    "            \n",
+    "tester = Event()\n",
+    "tester.name = \"Test\"\n",
+    "print(tester)\n",
+    "\n",
+    "tester3 = Event()\n",
+    "tester3.name = \"Test3\"\n",
+    "\n",
+    "tester2 = Agenda()\n",
+    "tester2.event = tester\n",
+    "tester2.add_event(tester3)\n",
+    "tester2.print_agenda()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As objects"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,21 +289,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
