Returning in Day 10

--- a/day10_reading_journal.ipynb
+++ b/day10_reading_journal.ipynb
@@ -69,24 +69,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:empty, Start:0, End:1\n"
+     ]
+    }
+   ],
    "source": [
+    "class Time():\n",
+    "    \"\"\"\n",
+    "    A class that represents time...deep I know\n",
+    "    \"\"\"\n",
+    "\n",
     "class Event():\n",
     "    \"\"\"\n",
     "    A class that represents an event on a calendar\n",
     "    \"\"\"\n",
-    "    def __init__(self, name='test', start=0, end=1):\n",
+    "    def __init__(self, other, name=\"empty\"):\n",
     "        self.name = name\n",
-    "        self.start = start\n",
-    "        self.end = end\n",
+    "        self.start = other.start\n",
+    "        self.end = other.end\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return \"Name:%s, Start:%d, End:%d\"%(self.name, self.start, self.end)"
+    "        return \"Name:%s, Start:%d, End:%d\"%(self.name, self.start, self.end)\n",
+    "    \n",
+    "time = Time()\n",
+    "time.start = 0\n",
+    "time.end = 1\n",
+    "event = Event(time)\n",
+    "print(event)"
    ]
   },
   {
@@ -111,8 +130,8 @@
    "outputs": [],
    "source": [
     "def duration(self):\n",
-    "    start = self.start\n",
-    "    end = self.end\n",
+    "    start = self.time.start\n",
+    "    end = self.time.end\n",
     "    return end-start"
    ]
   },
@@ -132,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -141,37 +160,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name:Test, Start:0, End:1\n",
-      "test\n",
-      "Test3\n"
+      "Hello\n"
      ]
     }
    ],
    "source": [
+    "class Time():\n",
+    "    \"\"\"\n",
+    "    A class that represents time...deep I know\n",
+    "    \"\"\"\n",
+    "\n",
     "class Event():\n",
     "    \"\"\"\n",
     "    A class that represents an event on a calendar\n",
     "    \"\"\"\n",
-    "    def __init__(self, name='test', start=0, end=1):\n",
+    "    def __init__(self, other, name=\"empty\"):\n",
     "        self.name = name\n",
-    "        self.start = start\n",
-    "        self.end = end\n",
+    "        self.start = other.start\n",
+    "        self.end = other.end\n",
     "        \n",
     "    def __str__(self):\n",
     "        return \"Name:%s, Start:%d, End:%d\"%(self.name, self.start, self.end)\n",
-    "\n",
     "\n",
     "class Agenda():\n",
     "    \"\"\"\n",
     "    A class that stores multiple event objects as part of a calendar\n",
     "    \"\"\"\n",
     "    global events\n",
-    "    events = []\n",
-    "    def __init__(self, event=Event()):\n",
-    "        self.event = event\n",
-    "        events.append(event.name)\n",
-    "    def add_event(self, other):\n",
-    "        events.append(other.name)        \n",
+    "    def __init__(self, other_event, other_time, event1='', start=0, end=1):\n",
+    "        self.event = other_event\n",
+    "        self.start_time = other_time.start\n",
+    "        self.end_time = other_time.end\n",
+    "        events.append(self.event.name)\n",
+    "    def add_event(self, other_event):\n",
+    "        self.event = other_event\n",
+    "        events.append(self.event.name)        \n",
     "    def __str__(self):\n",
     "        return self.event.name\n",
     "    def print_agenda(self):\n",
@@ -179,17 +202,15 @@
     "            print(events[i])\n",
     "            \n",
     "            \n",
-    "tester = Event()\n",
-    "tester.name = \"Test\"\n",
-    "print(tester)\n",
-    "\n",
-    "tester3 = Event()\n",
-    "tester3.name = \"Test3\"\n",
-    "\n",
-    "tester2 = Agenda()\n",
-    "tester2.event = tester\n",
-    "tester2.add_event(tester3)\n",
-    "tester2.print_agenda()"
+    "time = Time()\n",
+    "time.start = 0\n",
+    "time.end = 1\n",
+    "event = Event(time)\n",
+    "event2 = Event(time, 'Hello')\n",
+    "agenda = Agenda(event, time)\n",
+    "agenda.add_event(event)\n",
+    "agenda.add_event(event2)\n",
+    "print(agenda)"
    ]
   },
   {
