Turning in day 15 reading journal

--- a/day15_reading_journal.ipynb
+++ b/day15_reading_journal.ipynb
@@ -48,12 +48,12 @@
     "solution": "Exercise B.1"
    },
    "source": [
-    "  1. \n",
-    "  2. \n",
-    "  3. \n",
-    "  4. \n",
-    "  5. \n",
-    "  6. "
+    "  1. Cubic. Cubic\n",
+    "  2. Cubic.\n",
+    "  3. It's order of growth is determined by g\n",
+    "  4. Their order of growth is the same for both of them, so the order of growth is just whatever g is\n",
+    "  5. The order of growth is determined by the function that increases the most, whether that is g or h\n",
+    "  6. Their order of growth is determined by the resultant power of the functions, so its the combination exponents of the two functions"
    ]
   },
   {
@@ -95,21 +95,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
