--- a/day18_reading_journal.ipynb
+++ b/day18_reading_journal.ipynb
@@ -38,12 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 19.1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=5)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def square(seq):\n",
     "    \"\"\"\n",
@@ -59,10 +70,11 @@
     "    TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'\n",
     "    \"\"\"\n",
     "    result = []\n",
-    "    for item in seq:\n",
-    "        squared_value = item **2\n",
-    "        result.append(squared_value)\n",
-    "    return result\n",
+    "    return[(item**2) for item in seq]\n",
+    "#     for item in seq:\n",
+    "#         squared_value = item **2\n",
+    "#         result.append(squared_value)\n",
+    "#     return result\n",
     "\n",
     "def evens(seq):\n",
     "    \"\"\"\n",
@@ -74,10 +86,11 @@
     "    [0, 4, 16]\n",
     "    \"\"\"\n",
     "    result = []\n",
-    "    for item in seq:\n",
-    "        if item % 2 == 0:\n",
-    "            result.append(item)\n",
-    "    return result\n",
+    "    return[(item) for item in seq if item % 2 == 0]\n",
+    "#     for item in seq:\n",
+    "#         if item % 2 == 0:\n",
+    "#             result.append(item)\n",
+    "#     return result\n",
     "\n",
     "\n",
     "import doctest\n",
@@ -110,12 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 19.2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=7)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names = {\"Paul\": \"Ruvolo\", \"Oliver\": \"Steele\", \"Ben\": \"Hill\"}\n",
     "\n",
@@ -128,10 +152,14 @@
     "    >>> formal_greeting(\"Jasper\", names)\n",
     "    Howdy, stranger!\n",
     "    \"\"\"\n",
-    "    print \"Hello, Professor {}!\".format(name_dict[first_name])\n",
+    "    try:\n",
+    "        print (\"Hello, Professor {}!\".format(name_dict[first_name]))\n",
+    "    except KeyError:\n",
+    "        print('Howdy, stranger!')\n",
     "    \n",
     "\n",
-    "doctest.run_docstring_examples(formal_greeting, globals())    "
+    "# doctest.run_docstring_examples(formal_greeting, globals()) \n",
+    "doctest.testmod()"
    ]
   },
   {
@@ -173,21 +201,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
